--- a/resources.qrc
+++ b/resources.qrc
@@ -1,9 +1,6 @@
 <RCC>
     <qresource prefix="/shaders">
-        <file alias="globe.vert">media/shaders/globe.vert</file>
-        <file alias="globe.frag">media/shaders/globe.frag</file>
-    </qresource>
-    <qresource prefix="/images">
-        <file alias="earth.png">media/images/earth.png</file>
+        <file alias="globe.vert">shaders/globe.vert</file>
+        <file alias="globe.frag">shaders/globe.frag</file>
     </qresource>
 </RCC>
